--- a/kbas/public/style.css
+++ b/kbas/public/style.css
@@ -8,7 +8,7 @@ html,body {
 body {
         color: #bbb;
         background: #444;
-        font-family: verdana;
+        font-family: monospace;
         font-size: 10pt;
 }
 
